acceptance/tests/connect/envoy-config-static-client.yml
admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: "static-client-http-listener"
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 20000
    filter_chains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            stat_prefix: "ingress"
            codec_type: "AUTO"
            http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
            route_config:
              name: "static-client-http-route"
              virtual_hosts:
                - name: "static-client-http-route"
                  domains:
                    - "*"
                  routes:
                    - match:
                        prefix: "/"
                      route:
                        cluster: "static_client"

  - name: "static-server-http-listener"
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 1234
    filter_chains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            stat_prefix: "egress"
            codec_type: "AUTO"
            http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
            route_config:
              name: "static-server-http-route"
              virtual_hosts:
                - name: "static-server-http-route"
                  domains:
                    - "*"
                  routes:
                    - match:
                        prefix: "/"
                      route:
                        cluster: "static_server"

  clusters:
    - name: "static_client"
      connect_timeout: "5s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      load_assignment:
        cluster_name: static_client
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: "static-client"
                      port_value: 8080
    - name: "static_server"
      connect_timeout: "5s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      load_assignment:
        cluster_name: static_server
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: "static-server"
                      port_value: 20000
