acceptance/tests/connect/proxy-read-no-tproxy.txt
*[main][~/Documents/github/hashicorp/consul-k8s]$ consul-k8s proxy read static-server-69875455d-fmnrd
Envoy configuration for static-server-69875455d-fmnrd in namespace default:

==> Clusters (2)
Name            	FQDN            	Endpoints      	Type  	Last Updated
consul-dataplane	consul-dataplane	127.0.0.1:36477	STATIC	2023-06-21T23:23:14.303Z
local_app       	local_app       	127.0.0.1:8080 	STATIC	2023-06-21T23:23:14.534Z


==> Endpoints (2)
Address:Port   	Cluster         	Weight	Status
127.0.0.1:36477	consul-dataplane	1.00  	HEALTHY
127.0.0.1:8080 	local_app       	1.00  	HEALTHY

==> Listeners (1)
Name           	Address:Port     	Direction	Filter Chain Match	Filters          	Last Updated
public_listener	10.244.0.32:20000	INBOUND  	Any               	RBAC:            	2023-06-21T23:23:14.820Z            	                 	         	                  	TCP: -> local_app

==> Routes (0)
Name	Destination Cluster	Last Updated

==> Secrets (0)
Name	Type	Last Updated


=====================================================================================================
*[main][~/Documents/github/hashicorp/consul-k8s]$ consul-k8s proxy read static-client-79779b7d9-dt78g
Envoy configuration for static-client-79779b7d9-dt78g in namespace default:

==> Clusters (3)
Name            	FQDN                                                                          	Endpoints        	Type  	Last Updated
consul-dataplane	consul-dataplane                                                              	127.0.0.1:37335  	STATIC	2023-06-21T23:23:21.357Z
local_app       	local_app                                                                     	127.0.0.1:0      	STATIC	2023-06-21T23:23:21.586Z
static-server   	static-server.default.dc1.internal.0e87d873-adc8-24f8-8995-a26e8229df4c.consul	10.244.0.32:20000	EDS   	2023-06-21T23:23:21.616Z


==> Endpoints (3)
Address:Port     	Cluster         	Weight	Status
127.0.0.1:37335  	consul-dataplane	1.00  	HEALTHY
10.244.0.32:20000	static-server   	1.00  	HEALTHY
127.0.0.1:0      	local_app       	1.00  	HEALTHY

==> Listeners (2)
Name           	Address:Port     	Direction	Filter Chain Match	Filters              	Last Updated
static-server  	127.0.0.1:1234   	OUTBOUND 	Any               	TCP: -> static-server	2023-06-21T23:23:21.624Z
public_listener	10.244.0.33:20000	INBOUND  	Any               	RBAC:                	2023-06-21T23:23:21.626Z
               	                 	         	                  	TCP: -> local_app

==> Routes (0)
Name	Destination Cluster	Last Updated

==> Secrets (0)
Name	Type	Last Updated
